--- a/src/package.json
+++ b/src/package.json
@@ -14,10 +14,13 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.12.1",
+    "mongoose": "^7.8.6",
+    "mongoose-unique-validator": "^4.0.1",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.9",
+    "path": "^0.12.7",
     "sharp": "^0.33.5"
   }
 }
